--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Frontend Mentor | Blog preview card</title>
   </head>
   <body>
-    <div class="card-container">
+    <main class="card-container">
       <div class="card-image">
         <img src="assets/images/illustration-article.svg" alt="" />
       </div>
@@ -23,7 +23,7 @@
       <div class="card-content">
         <p class="card-category">Learning</p>
         <p class="card-publish-date">Published 21 Dec 2023</p>
-        <p class="card-title">HTML & CSS foundations</p>
+        <h1 class="card-title">HTML & CSS foundations</h1>
         <p class="card-description">
           These languages are the backbone of every website, defining structure,
           content, and presentation.
@@ -34,6 +34,6 @@
         <img src="assets/images/image-avatar.webp" alt="">
         <span>Greg Hooper</span>
       </div>
-    </div>
+    </main>
   </body>
 </html>
